k8s/api.yml
apiVersion: v1
kind: Service
metadata:
  name: apisvc
  namespace: chordage
spec:
  type: LoadBalancer
  selector:
    app: api
  ports:
    - port: 5000
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: chordage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: chordage_api_image
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
