k8s/client.yml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  namespace: chordage
spec:
  type: LoadBalancer
  selector:
    app: client
  ports:
    - port: 8080
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: chordage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: chordage_client_image
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
